[gd_scene load_steps=6 format=3 uid="uid://cxnk0uabwanfn"]

[ext_resource type="Script" uid="uid://di4ponjh5gtye" path="res://src/scenes/ui/hand/card_ui.gd" id="1_tt30y"]
[ext_resource type="Texture2D" uid="uid://cw88cktjnkuf6" path="res://cc0_assets/water_card_template_blank.png" id="2_tt30y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_transparent"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tt30y"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gray_circle"]
bg_color = Color(0.5, 0.5, 0.5, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="CardUi" type="Control"]
custom_minimum_size = Vector2(130, 190)
layout_mode = 3
anchors_preset = 0
offset_top = 2.0
offset_right = 137.0
offset_bottom = 192.0
pivot_offset = Vector2(70, 100)
script = ExtResource("1_tt30y")

[node name="CardBackground" type="TextureRect" parent="."]
layout_mode = 1
offset_top = -1.0
offset_right = 137.0
offset_bottom = 190.0
texture = ExtResource("2_tt30y")
expand_mode = 1
stretch_mode = 5

[node name="TitlePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 136.0
offset_bottom = 20.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_transparent")

[node name="Title" type="Label" parent="TitlePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Card Name"
horizontal_alignment = 1

[node name="IconContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 22.0
offset_right = 128.0
offset_bottom = 80.0

[node name="TopHBoxContainer" type="HBoxContainer" parent="IconContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TickCostCircle" type="PanelContainer" parent="IconContainer/TopHBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_gray_circle")

[node name="CenterContainer" type="CenterContainer" parent="IconContainer/TopHBoxContainer/TickCostCircle"]
layout_mode = 2

[node name="TickCostLabel" type="Label" parent="IconContainer/TopHBoxContainer/TickCostCircle/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 110.0
offset_right = 129.0
offset_bottom = 159.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_transparent")

[node name="Description" type="RichTextLabel" parent="DescriptionPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 10
text = "Card description here."
fit_content = true
scroll_active = false


[node name="IsBuilding" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 116.0
offset_top = 5.0
offset_right = 132.0
offset_bottom = 21.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tt30y")
