class_name CardUI
extends Control

# UI Components
@onready var card_background = $CardBackground
@onready var card_title = $TitlePanel/Title 
@onready var card_description = $DescriptionPanel/Description
@onready var icon_container = $IconContainer
@onready var durability_label = $TargetingBoxContainer/DurabilityLabel
@onready var is_building = $IsBuilding


#@onready var card_image = $ImagePanel/Image
#@onready var activation_color_panel = $ActivationContainer/ActivationColorPanel

# Card data

					
	
